--- a/src/ui/component/feed/collection/CollectionInfo.pug
+++ b/src/ui/component/feed/collection/CollectionInfo.pug
@@ -35,8 +35,8 @@ style.
 	.collection-info-loading
 		color var(--c-text-weak)
 	.collection-info-name
-		font-size 1.333em
-		font-weight var(--f-wght-strong)
+		font-size inherit
+		font-weight inherit
 	.collection-info-subreddit
 		color var(--c-text-weak)
 		display flex
