--- a/src/ui/component/feed/subreddit/SubredditInfo.pug
+++ b/src/ui/component/feed/subreddit/SubredditInfo.pug
@@ -77,9 +77,8 @@ style.
 	.subreddit-info-loading
 		color var(--c-text-weak)
 	.subreddit-info-name
-		font-size 1.1666em
-		font-weight var(--f-wght-strong)
-		letter-spacing -0.333px
+		font-size inherit
+		font-weight inherit
 		overflow hidden
 		text-overflow ellipsis
 	.subreddit-info-widgets
