--- a/src/ui/App.pug
+++ b/src/ui/App.pug
@@ -10,7 +10,7 @@ script.
 	import ThemeProviderOverlay from './overlay/ThemeProviderOverlay.pug'
 	
 	import AppRoute from './AppRoute.pug'
-	import AppRouteHome from './AppRouteHome.pug'
+	import AppRouteSubreddits from './AppRouteSubreddits.pug'
 	import AppRouteUnsupported from './AppRouteUnsupported.pug'
 	
 	route = {}
@@ -106,8 +106,8 @@ ThemeProviderOverlay
 			RadialMenuOverlay
 				TableManagerOverlay
 					{#if route.feed || route.post || route.wiki}
-						{#if route.feed?.type === 'homepage'}
-							AppRouteHome
+						{#if route.feed?.type === 'subreddits'}
+							AppRouteSubreddits(filter={route.feed.filter})
 						{:else}
 							AppRoute(feed={route.feed} post={route.post} wiki={route.wiki})
 					{:else}
