--- a/src/ui/component/feed/multireddit/MultiredditInfo.pug
+++ b/src/ui/component/feed/multireddit/MultiredditInfo.pug
@@ -10,35 +10,22 @@ script.
 	export user_name = null
 	
 	multireddit = null
-	subscribed_subreddits = null
-	trending_subreddits = null
 
 	api.loadWatch(api.ID('multireddit', user_name, multireddit_name), (x) ->
 		{ data: multireddit } = x
 	)
-	if user_name == 'r'
-		if multireddit_name == 'subscribed'
-			api.loadWatch(api.ID('account_subreddits_subscribed', 100), (x) ->
-				{ data: subscribed_subreddits } = x
-			)
-		else
-			api.loadWatch(api.ID('global_subreddits_popular', 10), (x) ->
-				{ data: trending_subreddits } = x
-			)
 
 aside.multireddit-info
 	header.multireddit-info-header
 		MultiredditAvatar(multireddit_name={multireddit_name} user_name={user_name})
-		h1.multireddit-info-name {user_name === 'r' ? 'r/' : ''}{multireddit_name.toLowerCase()}
+		h1.multireddit-info-name {multireddit_name.toLowerCase()}
 	{#if multireddit}
 		{#if multireddit.description_html}
 			FormattedHTML(html={multireddit.description_html})
+		{:else if user_name === 'r'}
+			p reddit: the frontpage of the internet
 		{#if multireddit.subreddits}
 			SubredditWidget(widget={{ data: multireddit.subreddits.map(x => ({ name: x })), kind: 'community-list', shortName: 'List of subreddits' }})
-		{:else if subscribed_subreddits}
-			SubredditWidget(widget={{ data: subscribed_subreddits.map(x => ({ name: x })), kind: 'community-list', shortName: 'Your subreddits' }})
-		{:else if trending_subreddits}
-			SubredditWidget(widget={{ data: trending_subreddits.map(x => ({ name: x })), kind: 'community-list', shortName: 'Trendy subreddits' }})
 	{#if user_name !== 'r'}
 		cite.multireddit-info-owner
 			| by
@@ -55,8 +42,8 @@ style.
 		gap 1em
 		width 100%
 	.multireddit-info-name
-		font-size 1.333em
-		font-weight var(--f-wght-strong)
+		font-size inherit
+		font-weight inherit
 		overflow hidden
 		text-overflow ellipsis
 	.multireddit-info-owner
