--- a/src/ui/component/post/Comment.pug
+++ b/src/ui/component/post/Comment.pug
@@ -170,8 +170,10 @@ style.
 		align-items center
 		display flex
 		gap 0.5em
-		max-width 100%
+		overflow hidden
 		padding 0.333em
+		white-space nowrap
+		width 100%
 	.comment-replies
 		border-left 1px solid var(--c-text-xfaint)
 		margin 1.333em 0
