--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -37,7 +37,7 @@ script.
 		{ label: 'Old', value: 'old' }
 		{ label: 'New', value: 'new' }
 		{ label: 'Q&A', value: 'qa' }
-		{ label: 'Controversial', value: 'controversial' }
+		{ label: 'Controver.', value: 'controversial' }
 	]
 	comments_sort_options_chat = [
 		{ label: 'New (Chat Mode)', value: 'new' }
@@ -263,14 +263,16 @@ style.
 	.post
 		background var(--c-tint-normal)
 		border-radius 1em
+	.post-and-comments
 		width 100%
 	.post-body
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
-		gap 3px
+		gap 0.666em
 		:global(& .twitter-tweet)
 			margin 0 !important
+			width 100% !important
 		:global(& .twitter-tweet iframe)
 			border-radius 11px
 	.post-comments
@@ -298,7 +300,7 @@ style.
 		aspect-ratio 1
 		background var(--c-text-faint)
 		border-radius 1em
-		width 480px
+		width 100%
 		&:fullscreen
 			border-radius 0
 	.post-image
@@ -317,7 +319,9 @@ style.
 		display flex
 		gap 0.5em
 		max-width 100%
+		overflow hidden
 		padding 0.333em
+		white-space nowrap
 	.post-predictions
 		display flex
 		flex-flow column nowrap
@@ -347,16 +351,17 @@ style.
 		cursor help
 		font-size 12px
 	.post-text
-		margin-top 1em
+		margin-top 0.666em
 		padding 0 1em 1em
+		width 100%
 		:global(& img)
 			border-radius 1em
 	.post-title
 		font-size 1.1666em
-		font-weight var(--f-wght-normal) !important
+		font-weight var(--f-wght-normal)
 		line-height 1.2
 		overflow-wrap anywhere
+		width 100%
 		.post-and-comments-expanded &
 			font-size 1.5em
-			font-weight var(--f-wght-strong)
 			letter-spacing 0
