--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -269,7 +269,7 @@ style.
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
-		gap 0.666em
+		gap 1px
 		:global(& .twitter-tweet)
 			margin 0 !important
 			width 100% !important
@@ -287,9 +287,11 @@ style.
 	.post-gallery-image
 		width 100%
 	.post-gallery-image-caption
-		font-size 12px
+		font-size 13px
+		font-weight var(--f-wght-normal)
 		letter-spacing 0.333px
-		padding 1em
+		padding 0.333rem 0 1rem
+		text-align center
 	.post-header
 		align-items flex-start
 		display flex
@@ -305,8 +307,13 @@ style.
 			border-radius 0
 	.post-image
 		background var(--c-text-faint)
-		border-radius 1em
 		width 100%
+		.post-gallery-image:first-of-type &
+			border-top-left-radius 1em
+			border-top-right-radius 1em
+		.post-gallery-image:last-of-type &
+			border-bottom-left-radius 1em
+			border-bottom-right-radius 1em
 	.post-link
 		font-family var(--f-family-mono)
 		font-size 1.25em
@@ -351,7 +358,7 @@ style.
 		cursor help
 		font-size 12px
 	.post-text
-		margin-top 0.666em
+		margin-top 1em
 		padding 0 1em 1em
 		width 100%
 		:global(& img)
