post: don't try to save space by abbreviating "Controversial"

--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -37,7 +37,7 @@ script.
 		{ label: 'Old', value: 'old' }
 		{ label: 'New', value: 'new' }
 		{ label: 'Q&A', value: 'qa' }
-		{ label: 'Controver.', value: 'controversial' }
+		{ label: 'Controversial', value: 'controversial' }
 	]
 	comments_sort_options_chat = [
 		{ label: 'New (Chat Mode)', value: 'new' }
