--- a/src/ui/component/common/Button.pug
+++ b/src/ui/component/common/Button.pug
@@ -46,6 +46,7 @@ style.
 	.button
 		align-items center
 		background var(--c-shade-weak)
+		border 1px solid transparent
 		display inline-flex
 		font-family var(--f-family-mono)
 		gap 5px
@@ -55,13 +56,14 @@ style.
 		user-select none
 		white-space nowrap
 		&.button-activated
-			background var(--c-shade-strong)
+			background none
+			border-color inherit
 		&:disabled
 		&.button-disabled
 			cursor auto
 			opacity 0.5
-		&:hover:not(.button-activated)
-			background var(--c-shade-strong)
+		&:hover
+			border-color inherit
 		&.button-adjacency-group-end
 			border-end-end-radius 11px
 			border-start-end-radius 11px
