ui: add padding around TextInput text

--- a/src/ui/component/common/TextInput.pug
+++ b/src/ui/component/common/TextInput.pug
@@ -42,6 +42,7 @@ style.
 	.text-input
 		border-bottom 2px solid var(--c-text-faint)
 		font-weight var(--f-wght-strong)
+		padding 0.333em 0.666em
 		width 100%
 		&:focus
 			outline none
