ui: show color change when hovering post/comment scores and author names

--- a/src/ui/component/post/Comment.pug
+++ b/src/ui/component/post/Comment.pug
@@ -187,6 +187,8 @@ style.
 		font-weight var(--f-wght-strong)
 		line-height 1
 		padding 1px 6px
+		&:hover
+			color var(--c-text-strong)
 		&.comment-score-downvoted
 			opacity 0.5
 		&.comment-score-upvoted
