--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -349,6 +349,8 @@ style.
 		font-weight var(--f-wght-strong)
 		line-height 1
 		padding 1px 6px
+		&:hover
+			color var(--c-text-strong)
 		&.post-score-downvoted
 			opacity 0.5
 		&.post-score-upvoted
