ui: fix button border being colored unevenly in certain situations

--- a/src/ui/component/common/Button.pug
+++ b/src/ui/component/common/Button.pug
@@ -57,13 +57,13 @@ style.
 		white-space nowrap
 		&.button-activated
 			background none
-			border-color inherit
+			border-color var(--c-text-strong)
 		&:disabled
 		&.button-disabled
 			cursor auto
 			opacity 0.5
 		&:hover
-			border-color inherit
+			border-color var(--c-text-strong)
 		&.button-adjacency-group-end
 			border-end-end-radius 11px
 			border-start-end-radius 11px
