ui: add hover hint for Checkbox component

--- a/src/ui/component/common/Checkbox.pug
+++ b/src/ui/component/common/Checkbox.pug
@@ -17,6 +17,8 @@ style.
 		gap 0.666em
 		letter-spacing 0.333px
 		user-select none
+		&:hover::before
+			border-color var(--c-text-strong)
 		&::before
 			aspect-ratio 1
 			background-clip content-box
