ui: don't allow flexbox size changes for avatars

--- a/src/ui/component/user/UserAvatar.pug
+++ b/src/ui/component/user/UserAvatar.pug
@@ -48,6 +48,7 @@ style.
 	.user-avatar
 		aspect-ratio 1
 		display inline-block
+		flex 0 0 auto
 		position relative
 		user-select none
 	.user-avatar-account-suspended
