ui: rework feed layout to improve consistency & understandability

--- a/src/ui/AppRoute.pug
+++ b/src/ui/AppRoute.pug
@@ -4,11 +4,9 @@ script.
 	import CollectionAvatar from './component/feed/collection/CollectionAvatar.pug'
 	import CollectionInfo from './component/feed/collection/CollectionInfo.pug'
 	import Feed from './component/feed/Feed.pug'
-	import FeedFilterOptions from './component/feed/FeedFilterOptions.pug'
 	import FeedSearchOptions from './component/feed/FeedSearchOptions.pug'
 	import FeedSortOptions from './component/feed/FeedSortOptions.pug'
 	import FeedStatus from './component/feed/FeedStatus.pug'
-	import LoginLogoutButton from './component/user/account/LoginLogoutButton.pug'
 	import MultiredditAvatar from './component/feed/multireddit/MultiredditAvatar.pug'
 	import MultiredditInfo from './component/feed/multireddit/MultiredditInfo.pug'
 	import Post from './component/post/Post.pug'
@@ -34,67 +32,40 @@ main#app-main-content
 				{#key post.focus_comment_parent_count}
 					Post(comments_sort={post.comments_sort} expanded={true} focus_comment_parent_count={post.focus_comment_parent_count} focus_comment_id={post.focus_comment_id} id={post.id})
 	{:else if feed}
-		header#app-feed-header
-			{#if feed.collection_id}
-				{#key feed.collection_id}
-					CollectionAvatar(id={feed.collection_id} size='large')
-				section#app-feed-header-section
-					span#app-feed-type Collection
-					h1#app-feed-title {feed.collection_id}
-			{:else if feed.multireddit_name}
-				{#key feed.user_name}
-					{#key feed.multireddit_name}
-						MultiredditAvatar(multireddit_name={feed.multireddit_name} size='large' user_name={feed.user_name})
-				section#app-feed-header-section
-					span#app-feed-type Multireddit
-					h1#app-feed-title {feed.user_name}/{feed.multireddit_name}
-			{:else if feed.subreddit_name}
-				{#key feed.subreddit_name}
-					SubredditAvatar(name={feed.subreddit_name} size='large')
-				section#app-feed-header-section
-					span#app-feed-type Subreddit
-					h1#app-feed-title {feed.subreddit_name}
-			{:else if feed.user_name}
-				{#key feed.user_name}
-					UserAvatar(name={feed.user_name} size='large')
-				section#app-feed-header-section
-					span#app-feed-type User
-					h1#app-feed-title {feed.user_name}
-			{:else}
-				a(href='/')
-					img#app-home-icon(alt='Reddit logo' src='/reddit_logo.svg')
-				h1#app-feed-title reddit
-		menu#app-feed-options
-			{#key feed.type}
-				{#key feed.subreddit_name}
-					FeedSortOptions(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name} wikipage_name={wiki?.page_name})
-			{#if feed.sort === 'search'}
-				{#key feed.subreddit_name}
-					FeedSearchOptions(multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} subreddit_name={feed.subreddit_name})
-			{:else}
-				{#if feed.type.endsWith('posts')}
-					FeedFilterOptions(filter={feed.filter})
 		{#key feed.collection_id}
 			{#key feed.multireddit_name}
 				{#key feed.subreddit_name}
 					{#key feed.user_name}
 						FeedStatus(collection_id={feed.collection_id} multireddit_name={feed.multireddit_name} subreddit_name={feed.subreddit_name} user_name={feed.user_name})
-		{#key feed.collection_id}
-			{#key feed.filter}
+		{#if feed.multireddit_name || feed.subreddit_name}
+			h1#app-feed-title Headlines
+			h2#app-feed-subtitle Today
+			{#if feed.multireddit_name}
 				{#key feed.multireddit_name}
-					{#key feed.search_sort}
-						{#key feed.search_text}
-							{#key feed.sort}
-								{#key feed.subreddit_name}
-									{#key feed.time_range}
-										{#key feed.user_name}
-											{#if feed.filter === 'comments'}
-												{#if feed.subreddit_name}
-													Feed(page_size='25' subreddit_name={feed.subreddit_name} type='subreddit_comments')
-												{:else if feed.user_name && !feed.multireddit_name}
-													Feed(page_size='25' type='user_comments' user_name={feed.user_name})
-											{:else}
-												Feed(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name})
+					{#key feed.user_name}
+						Feed(filter='all' multireddit_name={feed.multireddit_name} page_size={3} show_actions={false} sort='top' time_range='day' type='multireddit_posts' user_name={feed.user_name})
+			{:else if feed.subreddit_name}
+				{#key feed.subreddit_name}
+					Feed(filter='all' page_size={3} show_actions={false} sort='top' subreddit_name={feed.subreddit_name} time_range='day' type='subreddit_posts')
+			h2#app-feed-subtitle This week
+			{#if feed.multireddit_name}
+				{#key feed.multireddit_name}
+					{#key feed.user_name}
+						Feed(filter='all' multireddit_name={feed.multireddit_name} page_size={3} show_actions={false} sort='top' time_range='week' type='multireddit_posts' user_name={feed.user_name})
+			{:else if feed.subreddit_name}
+				{#key feed.subreddit_name}
+					Feed(filter='all' page_size={3} show_actions={false} sort='top' subreddit_name={feed.subreddit_name} time_range='week' type='subreddit_posts')
+			h2#app-feed-subtitle Controversial today
+			{#if feed.multireddit_name}
+				{#key feed.multireddit_name}
+					{#key feed.user_name}
+						Feed(filter='all' multireddit_name={feed.multireddit_name} page_size={1} show_actions={false} sort='controversial' time_range='week' type='multireddit_posts' user_name={feed.user_name})
+			{:else if feed.subreddit_name}
+				{#key feed.subreddit_name}
+					Feed(filter='all' page_size={1} show_actions={false} sort='controversial' subreddit_name={feed.subreddit_name} time_range='week' type='subreddit_posts')
+		{:else if feed.user_name}
+			{#key feed.user_name}
+				Feed(sort='new' type='user_comments' user_name={feed.user_name})
 {#if !wiki}
 	aside#app-secondary-content
 		{#if post?.id}
@@ -113,13 +84,13 @@ main#app-main-content
 		{:else if feed?.user_name}
 			{#key feed.user_name}
 				UserInfo(name={feed.user_name})
-nav#app-main-navigation
-	{#if feed}
-		{#if post || wiki}
+{#if feed}
+	nav#app-main-navigation
+		header#app-feed-header
 			{#if feed.collection_id}
 				{#key feed.collection_id}
 					CollectionAvatar(id={feed.collection_id} size='large')
-			{#if feed.multireddit_name}
+			{:else if feed.multireddit_name}
 				{#key feed.user_name}
 					{#key feed.multireddit_name}
 						MultiredditAvatar(multireddit_name={feed.multireddit_name} size='large' user_name={feed.user_name})
@@ -129,51 +100,49 @@ nav#app-main-navigation
 			{:else if feed.user_name}
 				{#key feed.user_name}
 					UserAvatar(name={feed.user_name} size='large')
-			{#if post}
-				{#key feed.collection_id}
-					{#key feed.filter}
-						{#key feed.multireddit_name}
-							{#key feed.search_sort}
-								{#key feed.search_text}
-									{#key feed.sort}
-										{#key feed.subreddit_name}
-											{#key feed.time_range}
-												{#key feed.user_name}
-													Feed(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name})
-		{:else}
-			LoginLogoutButton
-	{:else}
-		a(href='/')
-			img#app-home-icon(alt='Reddit logo' src='/reddit_logo.svg')
+			{:else}
+				a(href='/')
+					img#app-feed-icon-generic(alt='Reddit logo' src='/reddit_logo.svg')
+			{#key feed.type}
+				{#key feed.subreddit_name}
+					FeedSortOptions(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name} wikipage_name={wiki?.page_name})
+		{#if feed.sort === 'search'}
+			{#key feed.subreddit_name}
+				FeedSearchOptions(multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} subreddit_name={feed.subreddit_name})
+		{#key feed.collection_id}
+			{#key feed.filter}
+				{#key feed.multireddit_name}
+					{#key feed.search_sort}
+						{#key feed.search_text}
+							{#key feed.sort}
+								{#key feed.subreddit_name}
+									{#key feed.time_range}
+										{#key feed.user_name}
+											Feed(collection_id={feed.collection_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search_sort={feed.search_sort} search_text={feed.search_text} sort={feed.sort} subreddit_name={feed.subreddit_name} time_range={feed.time_range} type={feed.type} user_name={feed.user_name})
 
 style.
 	#app-feed-header
-		align-items center
+		align-items flex-end
 		display flex
-		gap 1em
-		padding 1em 0
-	#app-feed-header-section
-		display flex
-		flex-flow column nowrap
-		gap 0.333em
-	#app-feed-options
-		display flex
-		gap 1em
-	#app-feed-title
-		letter-spacing -0.333px
-		font-size 2em
-		font-weight var(--f-wght-strong)
-	#app-feed-type
-		color var(--c-text-weak)
-	#app-home-icon
+		flex-flow row-reverse wrap
+		justify-content space-between
+		width 100%
+	#app-feed-icon-generic
 		aspect-ratio 1
 		height 64px
+	#app-feed-subtitle
+		color var(--c-text-weak)
+		font-size 1em
+		font-weight var(--f-wght-strong)
+	#app-feed-title
+		font-size 1.5em
+		font-weight var(--f-wght-strong)
 	#app-main-content
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
 		gap 2em
-		padding 3em 0
+		padding 2em 0
 		width 480px
 	#app-main-navigation
 		align-items flex-end
@@ -182,7 +151,7 @@ style.
 		gap 2em
 		height 100dvh
 		overflow auto
-		padding 4em 0
+		padding 3em 0
 		position fixed
 		right calc(50% + 300px)
 		scrollbar-width none
@@ -197,7 +166,7 @@ style.
 		left calc(50% + 300px)
 		height 100dvh
 		overflow auto
-		padding 5em 0
+		padding 4em 0
 		position fixed
 		scrollbar-width none
 		top 0
