--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -37,7 +37,7 @@ script.
 		{ label: 'Old', value: 'old' }
 		{ label: 'New', value: 'new' }
 		{ label: 'Q&A', value: 'qa' }
-		{ label: 'Controversial', value: 'controversial' }
+		{ label: 'Con.', value: 'controversial' }
 	]
 	comments_sort_options_chat = [
 		{ label: 'New (Chat Mode)', value: 'new' }
@@ -261,8 +261,14 @@ svelte:head
 
 style.
 	.post
-		background var(--c-tint-normal)
+		background var(--c-shade-weak)
+		border 1px solid transparent
 		border-radius 1em
+		&:hover
+			border-color inherit
+		.post-and-comments-expanded &
+			background var(--c-tint-normal)
+			border none
 	.post-and-comments
 		width 100%
 	.post-body
@@ -296,7 +302,7 @@ style.
 		align-items flex-start
 		display flex
 		flex-flow column nowrap
-		gap 10px
+		gap 0.333em
 		padding 1em
 	.post-iframe
 		aspect-ratio 1
@@ -366,11 +372,13 @@ style.
 		:global(& img)
 			border-radius 1em
 	.post-title
-		font-size 1.1666em
+		font-size 1.125em
 		font-weight var(--f-wght-normal)
-		line-height 1.2
+		line-height 1.25
 		overflow-wrap anywhere
 		width 100%
 		.post-and-comments-expanded &
 			font-size 1.5em
+			font-weight var(--f-wght-strong)
 			letter-spacing 0
+			line-height 1.125
