ui: update app name

--- a/src/ui/component/directory/Directory.pug
+++ b/src/ui/component/directory/Directory.pug
@@ -63,7 +63,7 @@ script.
 
 nav.directory
 	header.directory-welcome
-		span R3 v0.7.0
+		span Arc v0.7.0
 	section.directory-content
 		menu.directory-input
 			TextInput(autofocus={true} enter_action={() => commit_prediction()} size='large' type_action={query => update_predictions(query)})
