--- a/src/ui/component/global/index.html
+++ b/src/ui/component/global/index.html
@@ -4,7 +4,7 @@
 		<!-- basic info -->
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=720'>
-		<title>r3</title>
+		<title>Arc</title>
 		<!-- webpack bundle -->
 		<%= htmlWebpackPlugin.tags.headTags %>
 	</head>
